added profile, question and categories page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,8 +31,21 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
+
       <h1>main.handlebars</h1>
       {{{body}}}
+      <nav class="navbar fixed-bottom navbar-dark indigo">
+  <a class="navbar-brand" href="home">Home</a>
+  <a class="navbar-brand" href="about">About</a>
+  <a class="navbar-brand" href="profile">Profile</a>
+
+  <a class="navbar-brand" href="love">Love</a>
+
+  <a class="navbar-brand" href="work">Work</a>
+   <a class="navbar-brand" href="family">Family</a>
+   <a class="navbar-brand" href="friendship">Friendship</a>
+  <a class="navbar-brand" href="question">Question</a>
+</nav>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
