--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,15 +35,11 @@
       <h1>main.handlebars</h1>
       {{{body}}}
       <nav class="navbar fixed-bottom navbar-dark indigo">
-  <a class="navbar-brand" href="home">Home</a>
+  <a class="navbar-brand" href="index">Home</a>
   <a class="navbar-brand" href="about">About</a>
   <a class="navbar-brand" href="profile">Profile</a>
 
-  <a class="navbar-brand" href="love">Love</a>
-
-  <a class="navbar-brand" href="work">Work</a>
-   <a class="navbar-brand" href="family">Family</a>
-   <a class="navbar-brand" href="friendship">Friendship</a>
+  <a class="navbar-brand" href="categories">Categories</a>
   <a class="navbar-brand" href="question">Question</a>
 </nav>
     <script
