--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,9 +35,11 @@
       <h1>main.handlebars</h1>
       {{{body}}}
       <nav class="navbar fixed-bottom navbar-dark indigo">
-  <a class="navbar-brand" href="index">Home</a>
+  <a class="navbar-brand" href="/">Home</a>
+
+  <a class="navbar-brand" href="addfriend">Priority 1: Add Friend</a>
   <a class="navbar-brand" href="about">About</a>
-  <a class="navbar-brand" href="profile">Profile</a>
+  <a class="navbar-brand" href="profile">priority 2: get and edit friend</a>
 
   <a class="navbar-brand" href="categories">Categories</a>
   <a class="navbar-brand" href="question">Question</a>
@@ -57,6 +59,6 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
-    <script src="" async defer></script>
+    <script src="../assets/js/formSubmitHandler.js" async defer></script>
   </body>
 </html>
