--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 
     <div class="card">
       <div class="card-header white d-flex justify-content-between">
-        <p class="h5-responsive font-weight-bold mb-0">Latest Members</p>
+        <p class="h5-responsive font-weight-bold mb-0">the coolest people I know</p>
         <ul class="list-unstyled d-flex align-items-center mb-0">
           <li><span class="badge badge-danger">8 New Members</span></li>
           <li><i class="far fa-window-minimize fa-sm pl-3"></i></li>
@@ -17,25 +17,32 @@
         <div class="row pt-4">
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
             <div class="avatar white text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg" class="img-fluid rounded-circle z-depth-1"/>
+              <img src="https://www.dropbox.com/s/fm8vurruc9h5gtz/homie.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
             <div class="text-center mt-2">
               <h6 class="font-weight-bold pt-2 mb-0">Alan Turing</h6>
               <p class="text-muted mb-0"><small>Today</small></p>
             </div>
           </div>
+{{!-- column start --}}
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
+
+{{!--  --}}
             <div class="avatar white text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="img-fluid rounded-circle z-depth-1"/>
+              <img src="https://www.dropbox.com/s/w6e6epwzlcr7pe4/bestfriend.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
+
             <div class="text-center mt-2">
               <h6 class="font-weight-bold pt-2 mb-0">Tom Johnson</h6>
               <p class="text-muted mb-0"><small>Yesterday</small></p>
             </div>
+
+            {{!--  --}}
           </div>
+          {{!-- column end --}}
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
             <div class="avatar white text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded-circle z-depth-1"/>
+              <img src="https://www.dropbox.com/s/iydzojfzl38grdg/colleague.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
             <div class="text-center mt-2">
               <h6 class="font-weight-bold pt-2 mb-0">Alex Laurie</h6>
@@ -44,7 +51,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
             <div class="avatar white text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle z-depth-1"/>
+              <img src="https://www.dropbox.com/s/v0pxvw5bp4ffdan/newFriend.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
             <div class="text-center mt-2">
               <h6 class="font-weight-bold pt-2 mb-0">Nathalie Fry</h6>
@@ -53,7 +60,7 @@
           </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
             <div class="avatar white text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" class="img-fluid rounded-circle z-depth-1"/>
+              <img src="https://www.dropbox.com/s/st884b1gigvc350/dear.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
             <div class="text-center mt-2">
               <h6 class="font-weight-bold pt-2 mb-0">Emma Lovelace</h6>
@@ -62,7 +69,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
             <div class="avatar white text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(5).jpg" class="img-fluid rounded-circle z-depth-1"/>
+              <img src="https://www.dropbox.com/s/o8phvvtmad1cl3p/family.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
             <div class="text-center mt-2">
               <h6 class="font-weight-bold pt-2 mb-0">Joanna Thompson</h6>
@@ -71,7 +78,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
             <div class="avatar white text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="img-fluid rounded-circle z-depth-1"/>
+              <img src="https://www.dropbox.com/s/9dela5ueptao89q/significantother.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
             <div class="text-center mt-2">
               <h6 class="font-weight-bold pt-2 mb-0">Billy Turner</h6>
@@ -80,7 +87,10 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
             <div class="avatar white text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="img-fluid rounded-circle z-depth-1"/>
+              <svg width="10em" height="10em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+</svg>
             </div>
             <div class="text-center mt-2">
               <h6 class="font-weight-bold pt-2 mb-0">Veronica Smith</h6>
