--- a/views/addFriend.handlebars
+++ b/views/addFriend.handlebars
@@ -101,12 +101,11 @@
                 <!--Textarea with icon prefix-->
                 <div class="md-form">
                   <i class="fas fa-pencil-alt prefix grey-text"></i>
-                  <textarea type="text" id="favoriteMemory" class="md-textarea form-control" placeholder="Your favorite memory" rows="3"></textarea>
+                  <textarea type="text" id="favoriteMemory" class="md-textarea form-control" name="favoriteMemory" placeholder="Your favorite memory" rows="3" ></textarea>
                 </div>
                 <div class="text-center mt-3">
                   <button class="btn btn-indigo btn-rounded" id="addFriendButton">Add Friend</button>
                   <hr>
-                  {{!-- #TODO: Make sure that the favoriteMemory goes through --}}
                   <fieldset class="form-check">
                     <input class="form-check-input" type="checkbox" id="checkbox1">
                     <label class="form-check-label" for="checkbox1" class="dark-grey-text">cute emojis here/label>
