able to render user data

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,7 @@
 <h1>Welcome!</h1>
+
+
+{{!-- beginning of container --}}
 <div class="container my-5">
 
   <!-- Section: Block Content -->
@@ -28,7 +31,7 @@
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
 
 {{!--  --}}
-            <div class="avatar white text-center">
+            {{!-- <div class="avatar white text-center">
               <img src="https://www.dropbox.com/s/w6e6epwzlcr7pe4/bestfriend.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
 
@@ -38,7 +41,21 @@
             </div>
 
             {{!--  --}}
+          </div> --}}
+
+        {{#each friendList}}
+              <div class="avatar white text-center">
+              <img src="https://www.dropbox.com/s/w6e6epwzlcr7pe4/bestfriend.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
+            </div>
+
+            <div class="text-center mt-2">
+              <h6 class="font-weight-bold pt-2 mb-0">{{name}}</h6>
+              <h5>{{emoji}} {{wishfulCity}} {{favoriteMemory}} </h5>
+              <p class="text-muted mb-0"><small>Yesterday</small></p>
+            </div>
+            {{!--  --}}
           </div>
+          {{/each}}
           {{!-- column end --}}
           <div class="col-lg-3 col-md-4 col-sm-6 pb-4">
             <div class="avatar white text-center">
@@ -107,4 +124,67 @@
   </section>
   <!-- Section: Block Content -->
 
+</div>
+{{!-- end of container --}}
+
+<div class="container py-5 my-5">
+  <section class="p-md-3 mx-md-5 text-center text-lg-left">
+    <h2 class="text-center font-weight-bold mb-4 pb-1">Our Team</h2>
+    <p class="text-center lead mb-5 pb-2 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+    <div class="row">
+
+        {{#each friends}}
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <div
+            class="avatar w-100 white d-flex justify-content-center align-items-center"
+          >
+            <img
+              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg"
+              class="img-fluid"
+            />
+          </div>
+          <div class="card-body">
+            <p class="font-weight-bold my-2">{{name}}</p>
+            <p class="text-muted">{{wishfulCity}}</p>
+
+            <p class="text-muted">{{favoriteMemory}}</p>
+          </div>
+        </div>
+      </div>
+      {{/each}}
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <div
+            class="avatar w-100 white d-flex justify-content-center align-items-center"
+          >
+            <img
+              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(22).jpg"
+              class="img-fluid"
+            />
+          </div>
+          <div class="card-body">
+            <p class="font-weight-bold my-2">Sally Thompson</p>
+            <p class="text-muted">Frontend Developer</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <div
+            class="avatar w-100 white d-flex justify-content-center align-items-center"
+          >
+            <img
+              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg"
+              class="img-fluid"
+            />
+          </div>
+          <div class="card-body">
+            <p class="font-weight-bold my-2">Anna Smith</p>
+            <p class="text-muted">Backend Developer</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
