all routes work - added signup and login page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -140,7 +140,7 @@
             class="avatar w-100 white d-flex justify-content-center align-items-center"
           >
             <img
-              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg"
+              src="https://www.dropbox.com/s/9dela5ueptao89q/significantother.png?raw=1"
               class="img-fluid"
             />
           </div>
