--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,57 +1,52 @@
-<h1>Welcome!</h1>
-<div class="container py-5 my-5">
-  <section class="p-md-3 mx-md-5 text-center text-lg-left">
-    <h2 class="text-center font-weight-bold mb-4 pb-1">Our Team</h2>
-    <p class="text-center lead mb-5 pb-2 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-    <div class="row">
-      <div class="col-lg-4 mb-4">
-        <div class="card">
-          <div
-            class="avatar w-100 white d-flex justify-content-center align-items-center"
-          >
-            <img
-              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg"
-              class="img-fluid"
-            />
+<style>
+
+  html,
+  body,
+  header,
+  .view {
+    height: 100%;
+  }
+
+</style>
+
+<!-- Main navigation -->
+<header>
+
+  <!-- Full Page Intro -->
+  <div class="view grey lighten-3">
+    <!-- Mask & flexbox options-->
+    <div class="mask">
+      <!-- Content -->
+      <div class="container h-100">
+        <!--Grid row-->
+        <div class="row align-items-center h-100">
+          <!--Grid column-->
+          <div class="col-md-6">
+            <h1 class="mb-4">do <span class="text-warning">you</span><br><span class="cyan-text">remember</span>?</h1>
+            <p class="mb-4 pb-2 dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae, culpa qui officia deserunt laborum fuga similique mollit id quos aperiam proident non ut rerum debitis.</p>
+            <a href="signup">
+          	<button type="button" class="btn btn-primary btn-rounded btn-md ml-md-0">Sign Up</button>
+              </a>
+               <a href="login">
+          	<button type="button" class="btn btn-outline-grey btn-rounded btn-md">Login</button>
+              </a>
+
           </div>
-          <div class="card-body">
-            <p class="font-weight-bold my-2">Veronica Smith</p>
-            <p class="text-muted">Creative Director</p>
+          <!--Grid column-->
+       
+          <!--Grid column-->
+          <div class="col-md-6">
+            <img src="https://mdbootstrap.com/img/illustrations/hiker-man-colour.svg" alt="" class="img-fluid">
           </div>
+          <!--Grid column-->
         </div>
+        <!--Grid row-->
       </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card">
-          <div
-            class="avatar w-100 white d-flex justify-content-center align-items-center"
-          >
-            <img
-              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(22).jpg"
-              class="img-fluid"
-            />
-          </div>
-          <div class="card-body">
-            <p class="font-weight-bold my-2">Sally Thompson</p>
-            <p class="text-muted">Frontend Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card">
-          <div
-            class="avatar w-100 white d-flex justify-content-center align-items-center"
-          >
-            <img
-              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg"
-              class="img-fluid"
-            />
-          </div>
-          <div class="card-body">
-            <p class="font-weight-bold my-2">Anna Smith</p>
-            <p class="text-muted">Backend Developer</p>
-          </div>
-        </div>
-      </div>
+      <!-- Content -->
     </div>
-  </section>
-</div>
+    <!-- Mask & flexbox options-->
+  </div>
+  <!-- Full Page Intro -->
+  
+</header>
+<!-- Main navigation -->
