able to add id as well

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -129,7 +129,7 @@
 
 <div class="container py-5 my-5">
   <section class="p-md-3 mx-md-5 text-center text-lg-left">
-    <h2 class="text-center font-weight-bold mb-4 pb-1">Our Team</h2>
+    <h2 class="text-center font-weight-bold mb-4 pb-1">the coolest people I know</h2>
     <p class="text-center lead mb-5 pb-2 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
     <div class="row">
 
