--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,6 +34,8 @@
   <a class="navbar-brand" href="/">Home</a>
 
   <a class="navbar-brand" href="addfriend">Priority 1: Add Friend</a>
+
+  <a class="navbar-brand" href="home">Priority 1: Get friend</a>
   <a class="navbar-brand" href="about">About</a>
   <a class="navbar-brand" href="profile">priority 2: get and edit friend</a>
 
