--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,109 @@
 <h1>Sign up </h1>
+<div class="container my-5 py-5 z-depth-1">
+
+
+  <!--Section: Content-->
+  <section class="text-center px-md-5 mx-md-5 dark-grey-text">
+
+    <!-- Section heading -->
+    <h3 class="font-weight-bold mb-4">Sign Up</h3>
+    <!-- Section description -->
+    <p class="text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
+      eum porro a pariatur veniam.</p>
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-9 mb-md-0 mb-5">
+
+        <form>
+
+          <!-- Grid row -->
+          <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-6">
+              <div class="md-form mb-0">
+                <input type="text" id="username" placeholder="username" class="form-control" name="username"> 
+              </div>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-6">
+              <div class="md-form mb-0">
+                <input type="text" id="password" placeholder="password" name="password" class="form-control">
+              </div>
+            </div>
+            <!-- Grid column -->
+
+          </div>
+          <!-- Grid row -->
+
+          <!-- Grid row -->
+          <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-12">
+              <div class="md-form mb-0">
+                <input type="text" id="reasonForUse"  placeholder="Reason to use this application" class="form-control">
+              </div>
+            </div>
+            <!-- Grid column -->
+
+          </div>
+          <!-- Grid row -->
+
+          <!-- Grid row -->
+          <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-12">
+              <div class="md-form">
+                <textarea id="message" placeholder="Message"
+                name="message" class="form-control md-textarea" rows="3"></textarea>
+              </div>
+            </div>
+            <!-- Grid column -->
+
+          </div>
+          <!-- Grid row -->
+
+        </form>
+
+        <div class="text-center text-md-left">
+          <a class="btn btn-primary btn-md btn-rounded">Sign Up</a>
+        </div>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 text-center">
+        <ul class="list-unstyled mb-0">
+          <li>
+            <i class="fas fa-map-marker-alt fa-2x blue-text"></i>
+            <p>San Francisco, CA 94126, USA</p>
+          </li>
+          <li>
+            <i class="fas fa-phone fa-2x mt-4 blue-text"></i>
+            <p>+ 01 234 567 89</p>
+          </li>
+          <li>
+            <i class="fas fa-envelope fa-2x mt-4 blue-text"></i>
+            <p class="mb-0">contact@example.com</p>
+          </li>
+        </ul>
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </section>
+  <!--Section: Content-->
+
+
+</div>
