added handlebars files

--- a/views/addFriend.handlebars
+++ b/views/addFriend.handlebars
@@ -88,10 +88,19 @@
                   <input placeholder="Name" type="text" id="name" name="name" class="form-control">
                 </div>
                 {{!-- Label  End --}}
+                {{!-- Start Dropdown --}}
                  <div class="md-form">
                   <i class="fas fa-user prefix grey-text"></i>
-                  <input type="text" id="emoji" placeholder="Emoji" name="emoji" class="form-control">
+                  
+                  <select id="emoji" name="emoji" class="form-control">
+                      <option value="homie">Homie</option>
+                      <option value="sweetheart">Sweetheart</option>
+                      <option value="fam"></option>
+                      <option value="teammate">&#129409;</option>
+                      <option value="dear">Dear &#129334;</option>
+                  </select>
                 </div>
+                {{!-- End Dropdown --}}
                 {{!-- Label Start --}}
                 <div class="md-form">
                   <i class="fas fa-envelope prefix grey-text"></i>
