--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<h1>Sign up </h1>
+
 <div class="container my-5 py-5 z-depth-1">
 
 
@@ -6,11 +6,9 @@
   <section class="text-center px-md-5 mx-md-5 dark-grey-text">
 
     <!-- Section heading -->
-    <h3 class="font-weight-bold mb-4">Sign Up</h3>
+    <h3 class="font-weight-bold mb-4">let's get started</h3>
     <!-- Section description -->
-    <p class="text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-      eum porro a pariatur veniam.</p>
+    <p class="text-center w-responsive mx-auto mb-5">create an account</p>
 
     <!-- Grid row -->
     <div class="row">
@@ -42,19 +40,6 @@
           </div>
           <!-- Grid row -->
 
-          <!-- Grid row -->
-          <div class="row">
-
-            <!-- Grid column -->
-            <div class="col-md-12">
-              <div class="md-form mb-0">
-                <input type="text" id="reasonForUse"  placeholder="Reason to use this application" class="form-control">
-              </div>
-            </div>
-            <!-- Grid column -->
-
-          </div>
-          <!-- Grid row -->
 
           <!-- Grid row -->
           <div class="row">
@@ -62,8 +47,8 @@
             <!-- Grid column -->
             <div class="col-md-12">
               <div class="md-form">
-                <textarea id="message" placeholder="Message"
-                name="message" class="form-control md-textarea" rows="3"></textarea>
+                <input id="email" placeholder="email"
+                name="email" class="form-control md-textarea" rows="3"></textarea>
               </div>
             </div>
             <!-- Grid column -->
