--- a/views/editFriend.handlebars
+++ b/views/editFriend.handlebars
@@ -1,4 +1,76 @@
 <div class="container">
-    <h1>Edit Person</h1>
+    <h1>Edit Person</h1><form id="editForm" data-id="{{friends.id}}">
+            <!--Form-->
+            <div class="card wow fadeInRight" data-wow-delay="0.3s">
+              <div class="card-body z-depth-2">
+                <!--Header-->
+                <div class="text-center">
+                  <h3 class="dark-grey-text">
+                    <strong>Edit Friend:</strong>
+                  </h3>
+                  <hr>
+                </div>
+                <!--Body-->
+                {{!-- Label Stare --}}
+                <div class="md-form">
+                  <i class="fas fa-user prefix grey-text"></i>
+                  <input placeholder="Name" type="text" id="name" name="name" class="form-control">
+                </div>
+                {{!-- Label  End --}}
+                {{!-- Start Dropdown --}}
+                 <div class="md-form">
+                  <i class="fas fa-user prefix grey-text"></i>
+                  
+                  <select id="emoji" name="emoji" class="form-control">
+                      <option value="homie">Homie</option>
+                      <option value="sweetheart">Sweetheart</option>
+                      <option value="fam"></option>
+                      <option value="teammate">&#129409;</option>
+                      <option value="dear">Dear &#129334;</option>
+                  </select>
+                </div>
+                {{!-- End Dropdown --}}
+                {{!-- Label Start --}}
+                <div class="md-form">
+                  <i class="fas fa-envelope prefix grey-text"></i>
+                  <input type="text" id="wishfulCity" name="wishfulCity" class="form-control" placeholder="The city you wish you guys met in">
+                </div>
+                {{!-- Label End --}}
+                <!--Textarea with icon prefix-->
+                <div class="md-form">
+                  <i class="fas fa-pencil-alt prefix grey-text"></i>
+                  <textarea type="text" id="favoriteMemory" class="md-textarea form-control" name="favoriteMemory" placeholder="Your favorite memory" rows="3" ></textarea>
+                </div>
+                <div class="text-center mt-3">
+                  <button class="btn btn-indigo btn-rounded" id="addFriendButton">Add Friend</button>
+                  <hr>
+                  <fieldset class="form-check">
+                    <input class="form-check-input" type="checkbox" id="checkbox1">
+                    <label class="form-check-label" for="checkbox1" class="dark-grey-text">cute emojis here/label>
+                  </fieldset>
+                </div>
 
+
+              </div>
+            </div>
+            <!--/.Form-->
+</form>
+            {{!-- end of form --}}
 </div>
+<script>
+    $("editForm").on("submit", (event) => {
+        event.preventDefault()
+        const friendId = $("#editForm").data("id")
+        const name = $("#name").val();
+        const emoji = $("#name").val()
+        const wishfulCity = $("#wishfulCity").val()
+        const favoriteMemory = $("#favoriteMemory").val()
+    }
+    $.ajax({
+        type: "PATCH",
+        url: `/api/edit_friend/${id}`,
+    })
+    
+    )
+
+</script>
