--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -139,6 +139,9 @@
           <div
             class="avatar w-100 white d-flex justify-content-center align-items-center"
           >
+          {
+              {{nickname}}
+          }
             <img
               src="https://www.dropbox.com/s/9dela5ueptao89q/significantother.png?raw=1"
               class="img-fluid"
