--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
           <!--Grid column-->
           <div class="col-md-6">
             <h1 class="mb-4">do <span class="text-warning">you</span><br><span class="cyan-text">remember</span>?</h1>
-            <p class="mb-4 pb-2 dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae, culpa qui officia deserunt laborum fuga similique mollit id quos aperiam proident non ut rerum debitis.</p>
+            <p class="mb-4 pb-2 dark-grey-text">an application to have better conversations</p>
             <a href="signup">
           	<button type="button" class="btn btn-primary btn-rounded btn-md ml-md-0">Sign Up</button>
               </a>
