--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,7 +16,7 @@
       <!-- Grid column -->
       <div class="col-md-9 mb-md-0 mb-5">
 
-        <form>
+        <form action="/" method="post" id="addUserForm">
 
           <!-- Grid row -->
           <div class="row">
@@ -59,7 +59,7 @@
         </form>
 
         <div class="text-center text-md-left">
-          <a class="btn btn-primary btn-md btn-rounded">Sign Up</a>
+          <a id="addUserButton" class="btn btn-primary btn-md btn-rounded">Sign Up</a>
         </div>
 
       </div>
@@ -70,7 +70,7 @@
         <ul class="list-unstyled mb-0">
           <li>
             <i class="fas fa-map-marker-alt fa-2x blue-text"></i>
-            <p>San Francisco, CA 94126, USA</p>
+            <p>Hong Kong</p>
           </li>
           <li>
             <i class="fas fa-phone fa-2x mt-4 blue-text"></i>
@@ -92,3 +92,39 @@
 
 
 </div>
+<script>
+    $("#addUserForm").on("submit", function(event) {
+    event.preventDefault();
+    let sendToServer = $("#addUserForm").serializeArray()
+    let username = $("#username").val()
+    let password = $("#password").val()
+    let email = $("#email").val()
+    console.log("Data: ", sendToServer)
+    let friend = {
+        id: 
+        username: name,
+        password: emoji,
+        email: wishfulCity,
+    }
+    sendToServer.push(friend)
+    console.log("Sending friend to server: ", sendToServer)
+
+    $.ajax({
+        type: "POST",
+        url: "/api/friends/addfriend",
+        data: sendToServer,
+        success: function() {
+            console.log("data sent!")
+            $("#name").val("")
+            $("#emoji").val("")
+            $("#wishfulCity").val("")
+            $("#favoriteMemory").val("")
+            location.replace("http://localhost:3000/")
+        },
+        error: function(error) {
+            console.log("An error occurred in your form submit handler")
+            console.log("The error is here: ", error)
+        }
+    })
+})
+</script>
