Able to sign up successfully

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -58,6 +58,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../assets/js/formSubmitHandler.js" async defer></script>
+
+    <script src="../assets/javascript/addFriendHandler.js"></script>
+    <script src="../assets/javascript/addUserHandler.js"></script>
   </body>
 </html>
