--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -36,7 +36,7 @@
 
         <!-- Material outline input -->
         <div class="md-form md-outline mt-3">
-          <input type="text" id="username" placeholder="username" name="username" class="form-control">
+          <input type="text" id="username" placeholder="email" name="username" class="form-control">
         </div>
 
         <!-- Material outline input -->
@@ -60,3 +60,4 @@
 
 </div>
 
+<br /><br />
