Added seed files

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<h1>Login</h1><div class="container my-5 py-5 z-depth-1">
+<div class="container my-5 py-5 z-depth-1">
 
 
   <!--Section: Content-->
@@ -19,13 +19,6 @@
       }
     </style>
 
-    <!--Google map-->
-    <div id="map-container-google-1" class="z-depth-1 map-container mb-5">
-      <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-        style="border:0" allowfullscreen></iframe>
-    </div>
-    <!--Google Maps-->
-
     <!--Grid row-->
     <div class="row d-flex justify-content-center">
 
@@ -34,10 +27,16 @@
 
         <h3 class="font-weight-bold">Login</h3>
 
+<button type="button" class="btn btn-fb"><i class="fab fa-facebook-f pr-1"></i> Spotify</button>
         <!-- Material outline input -->
         <div class="md-form md-outline mt-3">
-          <input type="text" id="username" placeholder="email" name="username" class="form-control">
+          <input type="text" id="username" placeholder="username" name="username" class="form-control">
         </div>
+        or
+          <div class="md-form md-outline mt-3">
+          <input type="text" id="email" placeholder="email" name="email" class="form-control">
+        </div>
+        and
 
         <!-- Material outline input -->
         <div class="md-form md-outline">
@@ -46,14 +45,10 @@
 
 
         <button type="submit" class="btn btn-info btn-sm ml-0">Login<i class="far fa-paper-plane ml-2"></i></button>
-
       </div>
       <!--Grid column-->
-
     </div>
     <!--Grid row-->
-
-
   </section>
   <!--Section: Content-->
 
