--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -22,8 +22,11 @@
         <div class="row align-items-center h-100">
           <!--Grid column-->
           <div class="col-md-6 wow fadeInLeft" data-wow-delay="0.2s">
-            <h1 class="white-text mb-4">Better Website Design, More Conversion</h1>
-            <p class="mb-4 pb-2 white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae, culpa qui officia deserunt labor debitis.</p>
+            <h1 class="white-text mb-4">Category</h1>
+            <p class="mb-4 pb-2 white-text">What are the good things you learnt from your mother? And your father?
+
+
+            </p>
           	<button type="button" class="btn btn-outline-white btn-md ml-md-0">Favorite</button>
           	<button type="button" class="btn btn-white btn-md">Next Question</button>
           </div>
