--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -1,61 +1,54 @@
-<h1>
-    Categories page 
-    <div class="container z-depth-1 my-5 py-5">
-
-  <!-- Section -->
-  <section>
-    
-    <style>
-      .border-top {
-        border-top-width: 2px !important;
-      }
-  	</style>
-
-    <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">Services</h6>
-    <h3 class="font-weight-bold text-center dark-grey-text pb-2">Our Services</h3>
-    <hr class="w-header my-4">
-    <p class="lead text-center text-muted pt-2 mb-5">Join thousands of satisfied customers using our template
-      globally.</p>
-
-    <div class="row d-flex justify-content-center">
-
-      <div class="col-md-6 col-lg-5 col-xl-4">
-        <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">Website
-            Design</a></h5>
-        <p class="text-muted mb-5 pb-md-3">Written enquire painful to offices forming it. Then so does over sent
-          dull. Likewise offended humour mrs
-          fat trifling answered. On ye position greatest so desirous enable performance based.</p>
+<div class="container z-depth-1 my-5 py-5">
+   <!-- Section -->
+   <section>
+      <style>
+         .border-top {
+         border-top-width: 2px !important;
+         }
+      </style>
+      <h6 class="text-center small mb-4">
+         <p class="text-muted pb-md-3">let's talk</p>
+      </h6>
+      <h3 class="font-weight-bold text-center dark-grey-text pb-2">categories</h3>
+      <hr class="w-header my-4">
+      <div class="row d-flex justify-content-center">
+         <div class="text-center col-md-6 col-lg-5 col-xl-4">
+            <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">
+               Love</a>
+            </h5>
+            <i class="fa fa-map-marker-alt fa-3x indigo-text mb-4"></i><br />
+            <button type="button" class="btn btn-outline-dark waves-effect">
+            converse
+            </button>
+         </div>
+         <br/>
+         <div class="text-center col-md-6 col-lg-5 col-xl-4">
+            <h5 class="font-weight-normal border-top border-secondary pt-4 mb-4"><a class="dark-grey-text"
+               href="#">Work</a></h5>
+            <i class="far fa-map fa-3x pink-text mb-4"></i><br />
+            <button type="button" class="btn btn-outline-dark waves-effect">
+            converse
+            </button>
+         </div>
+         <br/><br/>
+         <div class="w-100"></div><br/>
+         <div class="text-center col-md-6 col-lg-5 col-xl-4">
+            <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">Family</a></h5>
+            <i class="fa fa-globe-africa fa-3x amber-text mb-4"></i><br />
+            <button type="button" class="btn btn-outline-dark waves-effect">
+            converse
+            </button>
+         </div>
+         <br />
+         <div class="text-center col-md-6 col-lg-5 col-xl-4">
+            <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text"
+               href="#">Love</a></h5>
+            <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
+            <button type="button" class="btn btn-outline-dark waves-effect">
+            converse
+            </button>
+         </div>
       </div>
-
-      <div class="col-md-6 col-lg-5 col-xl-4">
-        <h5 class="font-weight-normal border-top border-secondary pt-4 mb-4"><a class="dark-grey-text"
-            href="#">Application Development</a></h5>
-        <p class="text-muted mb-5 pb-md-3">Written enquire painful to offices forming it. Then so does over sent
-          dull. Likewise offended humour mrs
-          fat trifling answered. On ye position greatest so desirous enable performance based.</p>
-      </div>
-
-      <div class="w-100"></div>
-
-      <div class="col-md-6 col-lg-5 col-xl-4">
-        <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">Branding
-            Package</a></h5>
-        <p class="text-muted mb-5">Written enquire painful to offices forming it. Then so does over sent dull.
-          Likewise offended humour mrs
-          fat trifling answered. On ye position greatest so desirous enable performance based.</p>
-      </div>
-
-      <div class="col-md-6 col-lg-5 col-xl-4">
-        <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text"
-            href="#">Advertisement</a></h5>
-        <p class="text-muted mb-5">Written enquire painful to offices forming it. Then so does over sent dull.
-          Likewise offended humour mrs
-          fat trifling answered. On ye position greatest so desirous enable performance based.</p>
-      </div>
-
-    </div>
-  </section>
-  <!-- Section -->
-
+   </section>
+   <!-- Section -->
 </div>
-</h1>
