--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,94 +1,153 @@
+<div>
 
-<div class="container my-5 py-5 z-depth-1">
+    <style>
+      .map-container {
+        overflow: hidden;
+        position: relative;
+        height: 0;
+      }
+
+      .map-container iframe {
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+      }
+  .hm-gradient {
+    background: linear-gradient(40deg, rgba(0,51,199,.3), rgba(209,149,249,.3));
+  }
+  .heading {
+    margin: 0 6rem;
+    font-size: 3.8rem;
+    font-weight: 700;
+    color: #5d4267;
+  }
+  .subheading {
+    margin: 2.5rem 6rem;
+    color: #bcb2c0;
+  }
+  .btn.btn-margin {
+    margin-left: 6rem;
+    margin-top: 3rem;
+  }
+  .btn.btn-lily {
+    background: linear-gradient(40deg, rgba(0,51,199,.7), rgba(209,149,249,.7));
+    color: #fff;
+  }
+  .title {
+    margin-top: 6rem;
+    margin-bottom: 2rem;
+    color: #5d4267;
+  }
+  .subtitle {
+    color: #bcb2c0;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 6rem;
+  }
+
+</style>
+
+<!-- Main navigation -->
 
 
-  <!--Section: Content-->
-  <section class="text-center px-md-5 mx-md-5 dark-grey-text">
 
-    <!-- Section heading -->
-    <h3 class="font-weight-bold mb-4">let's get started</h3>
-    <!-- Section description -->
-    <p class="text-center w-responsive mx-auto mb-5">create an account</p>
+  <!-- Intro -->
+  <section class="view">
 
-    <!-- Grid row -->
     <div class="row">
 
-      <!-- Grid column -->
-      <div class="col-md-9 mb-md-0 mb-5">
+      <div class="col-md-6">
 
-        <form action="/" method="POST" id="addUserForm">
-
-          <!-- Grid row -->
-          <div class="row">
-
-            <!-- Grid column -->
-               <div class="col-md-12">
-              <div class="md-form">
-                <input id="username" placeholder="email"
-                name="username" class="form-control md-textarea" rows="3"></textarea>
-              </div>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-6">
-              <div class="md-form mb-0">
-                <input type="text" id="password" placeholder="password" name="password" class="form-control">
-              </div>
-            </div>
-            <!-- Grid column -->
+        {{!-- <div class="d-flex flex-column justify-content-center align-items-center h-100">
+          <h1 class="heading">Material Design for Bootstrap</h1>
+          <h4 class="subheading font-weight-bold">World's most popular framework for building responsive, mobile-first websites and apps</h4>
+          <div class="mr-auto">
+            <button type="button" class="btn btn-lily btn-margin btn-rounded">Get started <i class="fas fa-caret-right ml-3"></i></button>
 
           </div>
-          <!-- Grid row -->
+          
+        </div> --}}
+
+{{!-- BEGINNING OF FORM --}}
+        <!-- Default form contact -->
+         <div class="d-flex flex-column justify-content-center align-items-center h-100">
+<form class="text-center border border-light p-5" action="#!">
+
+    <p class="h4 mb-4">let's get started</p>
+    <button type="button" class="btn btn-fb"><i class="fab fa-facebook-f pr-1"></i> Spotify</button>
+<br/>
+<br/>
+    <!-- Name -->
+    <input type="text" id="username" name="username" class="form-control mb-4" placeholder="Username">
+   
+
+   
+    <!-- Password -->
+    <input type="password" id="password" name="password" class="form-control mb-4" placeholder="Password">
+   
+
+    <!-- Email -->
+    <!-- Beginning of Label and Input -->
+        <input id="email" name="email" placeholder="E-mail" type="email" class="form-control" aria-describedby="smallText">
+        <small id="smallText" class="form-text text-muted">
+           Don't worry, we won't spam
+        </small>
+        <!-- Ending of Label and Input -->
+
+<br />
+    <!-- Subject -->
+    <label>Subject</label>
+    <select class="browser-default custom-select mb-4">
+        <option value="" disabled>Choose option</option>
+        <option value="1" selected>Feedback</option>
+        <option value="2">Report a bug</option>
+        <option value="3">Feature request</option>
+        <option value="4">Feature request</option>
+    </select>
+
+    <!-- Message -->
+    <div class="form-group">
+        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="how are you? what do you think this app will be like? what do you like about it so far?"></textarea>
+    </div>
+
+    
 
 
-          <!-- Grid row -->
-          <div class="row">
 
-            <!-- Grid column -->
-       
-            <!-- Grid column -->
+    <!-- Copy -->
+    <div class="custom-control custom-checkbox mb-4">
+        <input type="checkbox" class="custom-control-input" id="defaultContactFormCopy">
+        <label class="custom-control-label" for="defaultContactFormCopy">start with low expectations</label>
+    </div>
 
+    <!-- Send button -->
+    <button id="addUserButton" class="btn btn-outline-dark waves-effect" type="submit">alright</button>
+
+</form>
+</div>
+<!-- Default form contact -->
+{{!-- END OF FORM --}}
+
+
+
+      </div>
+
+      <div class="col-md-6">
+
+        <div class="view">
+          <img src="https://images.pexels.com/photos/325045/pexels-photo-325045.jpeg" class="img-fluid" alt="smaple image">
+          <div class="mask flex-center hm-gradient">
           </div>
-          <!-- Grid row -->
-
-   <div class="text-center text-md-left">
-              <button type="submit" id="addUserButton" class="btn btn-outline-dark waves-effect">
-                  Sign Up
-              </button>
         </div>
 
-        </form>
-
       </div>
-     
-
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-3 text-center">
-        <ul class="list-unstyled mb-0">
-          <li>
-            <i class="fas fa-map-marker-alt fa-2x blue-text"></i>
-            <p>Hong Kong</p>
-          </li>
-          <li>
-            <i class="fas fa-phone fa-2x mt-4 blue-text"></i>
-            <p>+ 01 234 567 89</p>
-          </li>
-          <li>
-            <i class="fas fa-envelope fa-2x mt-4 blue-text"></i>
-            <p class="mb-0">contact@example.com</p>
-          </li>
-        </ul>
-      </div>
-      <!-- Grid column -->
 
     </div>
-    <!-- Grid row -->
 
   </section>
-  <!--Section: Content-->
+  <!-- Intro -->
 
-
+<!-- Main navigation -->
 </div>
