All user service command works - awesome

--- a/views/addFriend.handlebars
+++ b/views/addFriend.handlebars
@@ -91,6 +91,10 @@
                               <i class="fas fa-pencil-alt prefix grey-text"></i>
                               <textarea type="text" id="favoriteMemory" class="md-textarea form-control" name="favoriteMemory" placeholder="Your favorite memory" rows="3" ></textarea>
                            </div>
+<div class="row justify-content-center">
+
+                     <button type="button" class="btn btn-outline-dark waves-effect">Add Friend
+                                 </button></div>
                         </div>
                      </div>
                      <!--/.Form-->
