--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -1,3 +1,12 @@
+{{!-- hANDLE BARS TEMPLATE BEGINS --}}
+   {{!-- {{#each question}}
+   {{emoji}} {{wishful_city}} 
+   <img src={{photo_url}} />
+                  {{favorite_memory}} 
+          {{/each}} 
+
+{{!-- HANDLE BARS TEMPLATE ENDS  --}}
+
 <style>
 
   html,
@@ -24,8 +33,6 @@
           <div class="col-md-6 wow fadeInLeft" data-wow-delay="0.2s">
             <h1 class="white-text mb-4">Category</h1>
             <p class="mb-4 pb-2 white-text">What are the good things you learnt from your mother? And your father?
-
-
             </p>
           	<button type="button" class="btn btn-outline-white btn-md ml-md-0">Favorite</button>
           	<button type="button" class="btn btn-white btn-md">Next Question</button>
