Making everything all in one file

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -59,19 +59,6 @@
     <div class="row">
 
       <div class="col-md-6">
-
-        {{!-- <div class="d-flex flex-column justify-content-center align-items-center h-100">
-          <h1 class="heading">Material Design for Bootstrap</h1>
-          <h4 class="subheading font-weight-bold">World's most popular framework for building responsive, mobile-first websites and apps</h4>
-          <div class="mr-auto">
-            <button type="button" class="btn btn-lily btn-margin btn-rounded">Get started <i class="fas fa-caret-right ml-3"></i></button>
-
-          </div>
-          
-        </div> --}}
-
-{{!-- BEGINNING OF FORM --}}
-        <!-- Default form contact -->
          <div class="d-flex flex-column justify-content-center align-items-center h-100">
 <form class="text-center border border-light p-5" action="#!">
 
@@ -80,42 +67,13 @@
 <br/>
 <br/>
     <!-- Name -->
-    <input type="text" id="username" name="username" class="form-control mb-4" placeholder="Username">
+    <input type="text" id="email" name="email" class="form-control mb-4" placeholder="Email">
    
 
    
     <!-- Password -->
     <input type="password" id="password" name="password" class="form-control mb-4" placeholder="Password">
    
-
-    <!-- Email -->
-    <!-- Beginning of Label and Input -->
-        <input id="email" name="email" placeholder="E-mail" type="email" class="form-control" aria-describedby="smallText">
-        <small id="smallText" class="form-text text-muted">
-           Don't worry, we won't spam
-        </small>
-        <!-- Ending of Label and Input -->
-
-<br />
-    <!-- Subject -->
-    <label>Subject</label>
-    <select class="browser-default custom-select mb-4">
-        <option value="" disabled>Choose option</option>
-        <option value="1" selected>Feedback</option>
-        <option value="2">Report a bug</option>
-        <option value="3">Feature request</option>
-        <option value="4">Feature request</option>
-    </select>
-
-    <!-- Message -->
-    <div class="form-group">
-        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="how are you? what do you think this app will be like? what do you like about it so far?"></textarea>
-    </div>
-
-    
-
-
-
     <!-- Copy -->
     <div class="custom-control custom-checkbox mb-4">
         <input type="checkbox" class="custom-control-input" id="defaultContactFormCopy">
