Able to render profile

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -105,7 +105,7 @@
       }
     </style>
     
-    <h3 class="font-weight-bold text-center dark-grey-text pb-2">Our History</h3>
+    <h3 class="font-weight-bold text-center dark-grey-text pb-2">About</h3>
     <hr class="w-header my-4">
     <p class="lead text-center text-muted pt-2 mb-5">MDB founded to help startups, and it still shapes the way we work today.</p>
 
