--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,21 +1,11 @@
 <h1>Welcome!</h1>
-
-{{!-- BEGINNING OF APPLE PAGE --}}
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
     <title>Product example for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
     <link href="product.css" rel="stylesheet">
   </head>
 
@@ -31,6 +21,79 @@
       <div class="product-device box-shadow d-none d-md-block"></div>
       <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
     </div>
+
+    {{!-- BEGINNING OF CARDS --}}
+
+<div class="container py-5 my-5">
+  <section class="p-md-3 mx-md-5 text-center text-lg-left">
+    <h2 class="text-center font-weight-bold mb-4 pb-1">the coolest people I know</h2>
+    <p class="text-center lead mb-5 pb-2 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+    <div class="row">
+
+        {{#each user_friend}}
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <div
+            class="avatar w-100 white d-flex justify-content-center align-items-center"
+          >
+          
+              {{nickname}}
+          
+            <img
+              src="https://www.dropbox.com/s/9dela5ueptao89q/significantother.png?raw=1"
+              class="img-fluid"
+            />
+          </div>
+          <div class="card-body">
+            <p class="font-weight-bold my-2">{{name}}</p>
+            <p class="text-muted">{{wishfulCity}}</p>
+
+            <p class="text-muted">{{favoriteMemory}}</p>
+          </div>
+        </div>
+      </div>
+      {{/each}}
+     <div class="col-lg-4 mb-4">
+        <div class="card">
+          <div
+            class="avatar w-100 white d-flex justify-content-center align-items-center"
+          >
+          
+              {{nickname}}
+          
+            <img
+              src="https://www.dropbox.com/s/9dela5ueptao89q/significantother.png?raw=1"
+              class="img-fluid"
+            />
+          </div>
+          <div class="card-body">
+            <p class="font-weight-bold my-2">{{name}}</p>
+            <p class="text-muted">{{wishfulCity}}</p>
+
+            <p class="text-muted">{{favoriteMemory}}</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <div
+            class="avatar w-100 white d-flex justify-content-center align-items-center"
+          >
+            <img
+              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg"
+              class="img-fluid"
+            />
+          </div>
+          <div class="card-body">
+            <p class="font-weight-bold my-2">Anna Smith</p>
+            <p class="text-muted">Backend Developer</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+    {{!-- ENDING OF CARDS --}}
 
 {{!-- beginning of first row --}}
           <button type="button" class="btn btn-outline-dark waves-effect">Play
@@ -193,14 +256,16 @@
             {{!--  --}}
           </div> --}}
 
-        {{#each friendList}}
+        {{#each user_friend}}
               <div class="avatar white text-center">
               <img src="https://www.dropbox.com/s/w6e6epwzlcr7pe4/bestfriend.png?raw=1" class="img-fluid rounded-circle z-depth-1"/>
             </div>
 
             <div class="text-center mt-2">
-              <h6 class="font-weight-bold pt-2 mb-0">{{name}}</h6>
-              <h5>{{emoji}} {{wishfulCity}} {{favoriteMemory}} </h5>
+              <h6 class="font-weight-bold pt-2 mb-0">
+                  {{name}} </h6>
+                  
+              <h5>{{emoji}} {{wishful_city}} {{favorite_memory}} </h5>
               <p class="text-muted mb-0"><small>Yesterday</small></p>
             </div>
             {{!--  --}}
@@ -276,68 +341,3 @@
 
 </div>
 {{!-- end of container --}}
-
-<div class="container py-5 my-5">
-  <section class="p-md-3 mx-md-5 text-center text-lg-left">
-    <h2 class="text-center font-weight-bold mb-4 pb-1">the coolest people I know</h2>
-    <p class="text-center lead mb-5 pb-2 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-    <div class="row">
-
-        {{#each friends}}
-      <div class="col-lg-4 mb-4">
-        <div class="card">
-          <div
-            class="avatar w-100 white d-flex justify-content-center align-items-center"
-          >
-          {
-              {{nickname}}
-          }
-            <img
-              src="https://www.dropbox.com/s/9dela5ueptao89q/significantother.png?raw=1"
-              class="img-fluid"
-            />
-          </div>
-          <div class="card-body">
-            <p class="font-weight-bold my-2">{{name}}</p>
-            <p class="text-muted">{{wishfulCity}}</p>
-
-            <p class="text-muted">{{favoriteMemory}}</p>
-          </div>
-        </div>
-      </div>
-      {{/each}}
-      <div class="col-lg-4 mb-4">
-        <div class="card">
-          <div
-            class="avatar w-100 white d-flex justify-content-center align-items-center"
-          >
-            <img
-              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(22).jpg"
-              class="img-fluid"
-            />
-          </div>
-          <div class="card-body">
-            <p class="font-weight-bold my-2">Sally Thompson</p>
-            <p class="text-muted">Frontend Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card">
-          <div
-            class="avatar w-100 white d-flex justify-content-center align-items-center"
-          >
-            <img
-              src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg"
-              class="img-fluid"
-            />
-          </div>
-          <div class="card-body">
-            <p class="font-weight-bold my-2">Anna Smith</p>
-            <p class="text-muted">Backend Developer</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-</div>
