--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -20,7 +20,7 @@
 
 <!-- Main navigation -->
 <header>
-
+{{!-- CATEGORY PAGE  --}}
   <!-- Full Page Intro -->
   <div class="view deep-purple darken-3">
     <!-- Mask & flexbox options-->
@@ -30,9 +30,11 @@
         <!--Grid row-->
         <div class="row align-items-center h-100">
           <!--Grid column-->
+
           <div class="col-md-6 wow fadeInLeft" data-wow-delay="0.2s">
             <h1 class="white-text mb-4">Category</h1>
-            <p class="mb-4 pb-2 white-text">What are the good things you learnt from your mother? And your father?
+            <p class="mb-4 pb-2 white-text">
+                {{question_string}}
             </p>
           	<button type="button" class="btn btn-outline-white btn-md ml-md-0">Favorite</button>
           	<button type="button" class="btn btn-white btn-md">Next Question</button>
@@ -41,7 +43,7 @@
        
           <!--Grid column-->
           <div class="col-md-6 wow fadeInRight" data-wow-delay="0.2s">
-            <img src="https://mdbootstrap.com/img/Mockups/Transparent/Small/cards2.png" alt="" class="img-fluid">
+            <img src={{photo_url}} alt="" class="img-fluid">
           </div>
           <!--Grid column-->
         </div>
@@ -53,5 +55,6 @@
   </div>
   <!-- Full Page Intro -->
   
+{{!-- CATEGORY PAGE  --}}
 </header>
 <!-- Main navigation -->
