Able to get all friends for one user

--- a/views/addFriend.handlebars
+++ b/views/addFriend.handlebars
@@ -83,13 +83,13 @@
                            {{!-- Label Start --}}
                            <div class="md-form">
                               <i class="fas fa-envelope prefix grey-text"></i>
-                              <input type="text" id="wishfulCity" name="wishfulCity" class="form-control" placeholder="The city you wish you guys met in">
+                              <input type="text" id="wishful_city" name="wishful_city" class="form-control" placeholder="The city you wish you guys met in">
                            </div>
                            {{!-- Label End --}}
                            <!--Textarea with icon prefix-->
                            <div class="md-form">
                               <i class="fas fa-pencil-alt prefix grey-text"></i>
-                              <textarea type="text" id="favoriteMemory" class="md-textarea form-control" name="favoriteMemory" placeholder="Your favorite memory" rows="3" ></textarea>
+                              <textarea type="text" id="fav_memory" class="md-textarea form-control" name="fav_memory" placeholder="Your favorite memory" rows="3" ></textarea>
                            </div>
 <div class="row justify-content-center">
 
